--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@
                console.log('Client sent data to WebSocket server: ', data);
          }
       </script>
-      <title>Feedback</title>
+      <title>Lumière Feedback</title>
    </head>
    <body>
-      <h1>Feedback from App</h1>
+      <h1>Feedback from Lumière App</h1>
       <form>
          <table border="1">
                <tr>
