--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -36,6 +36,46 @@
                console.log('Client sent data to WebSocket server: ', data);
          }
       </script>
+      <link href="https://fonts.googleapis.com/css2?family=Gantari:wght@400;700&display=swap" rel="stylesheet">
+      <style>
+          body {
+            font-family: 'Gantari', sans-serif;
+            background-color: #F8F0E5;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            color: #102C57;
+         }
+         h1 {
+            margin-top: 20px;
+         }
+         form {
+            margin: 20px auto;
+            width: 90%;
+            max-width: 800px;
+         }
+         table {
+            width: 100%;
+            border-collapse: collapse;
+         }
+         th, td {
+            padding: 10px;
+            text-align: left;
+         }
+         textarea {
+            width: 95%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            font-family: monospace;
+            background-color: #fafafa;
+            color: #102C57;
+         }
+         textarea#chatroom {
+            height: 300px;
+            resize: none;
+         }        
+      </style>
+
       <title>Lumière Feedback</title>
    </head>
    <body>
